[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/enemy_skull_head_demon.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/DemonSkullHead.gd" type="Script" id=2]
[ext_resource path="res://objects/HitboxEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.09567, 7.59356 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 9.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "throw_fireball"
}, {
"args": [  ],
"method": "throw_fireball"
}, {
"args": [  ],
"method": "throw_fireball"
}, {
"args": [  ],
"method": "throw_fireball"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.75, 7.59356 )

[node name="DemonSkullHead" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 12
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.614 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9.962 )
texture = ExtResource( 1 )
offset = Vector2( 2.477, 0 )
hframes = 25
frame = 7

[node name="PositionFireBall" type="Position2D" parent="Sprite"]
position = Vector2( -2.59059, 3.43745 )

[node name="TimerHurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/death = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="TimerStart" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.283001, -10.3417 )
scale = Vector2( 2.79428, 1.9104 )

[node name="HitboxEnemy" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxEnemy"]
position = Vector2( 0, -7.614 )
shape = SubResource( 5 )

[connection signal="timeout" from="TimerHurt" to="." method="_on_TimerHurt_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
